@@ -11,8 +11,9 @@
  */  -->
 <html>
 <head>
-    <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="form_auth.css">
     <title>INTER-Mediator - Sample - Form Style/MySQL</title>
     <script type="text/javascript" src="MySQL_definitions.php"></script>
     <script type="text/javascript" src="form_auth.js"></script>
@@ -74,8 +75,7 @@
                     <tr>
                         <th>datetime</th>
                         <th>summary</th>
-                        <th>way</th>
-                        <th>kind</th>
+                        <th>way/kind</th>
                         <th>description</th>
                         <th></th>
                     </tr>
@@ -91,14 +91,13 @@
                             <select data-im="contact@way">
                                 <option data-im="contact_way@id@value|contact_way@name@innerHTML"></option>
                             </select>
-                        </td>
-                        <td>
+                            /
                             <select data-im="contact@kind">
                                 <option data-im="kindid|kindname"></option>
                             </select>
                         </td>
                         <td><textarea data-im="contact@description@innerHTML"></textarea></td>
-                        <td></td>
+                        <td style="white-space: nowrap"></td>
                     </tr>
                     </tbody>
                 </table>
